<resources>
    <string name="basic_ui_app_name">BasicUI</string>

    <string name="basic_ui_dialog_btn_yes">确定</string>
    <string name="basic_ui_dialog_btn_no">取消</string>
    <string name="basic_ui_dialog_btn_close">关闭</string>

    <!--==========================版本更新============================-->
    <string name="basic_ui_dialog_update_title">发现新版本</string>
    <string name="basic_ui_dialog_update_test_title">发现内测版本</string>
    <string name="basic_ui_dialog_update_yes">立即更新</string>
    <string name="basic_ui_dialog_update_no">暂不更新</string>

    <!--==========================版本下载============================-->
    <string name="basic_ui_dialog_download_state_downloading">下载更新中...</string>
    <string name="basic_ui_dialog_download_state_install">立即安装</string>

    <!--==========================权限申请============================-->
    <string name="basic_ui_dialog_permission_close">暂不授权</string>
    <string name="basic_ui_dialog_permission_next">去授权</string>
    <string name="basic_ui_dialog_permission_next_go_setting">去设置</string>
    <string name="basic_ui_dialog_permission_title_unknow">未知</string>
    <string name="basic_ui_dialog_permission_title_calendar">日历</string>
    <string name="basic_ui_dialog_permission_title_camera">照相机</string>
    <string name="basic_ui_dialog_permission_title_contacts">通讯录</string>
    <string name="basic_ui_dialog_permission_title_location">定位</string>
    <string name="basic_ui_dialog_permission_title_microphone">麦克风</string>
    <string name="basic_ui_dialog_permission_title_phone">手机</string>
    <string name="basic_ui_dialog_permission_title_sms">短信</string>
    <string name="basic_ui_dialog_permission_title_sensors">传感器</string>
    <string name="basic_ui_dialog_permission_title_storage">存储空间</string>
    <string name="basic_ui_dialog_permission_description_title_holder">相关</string>
    <string name="basic_ui_dialog_permission_description">我们需要获取%s权限以确保应用的正常运行，请点击去授权完成权限申请。</string>
    <string name="basic_ui_dialog_permission_description_go_setting">您已拒绝应用使用%s权限，这将影响功能的正常运行，请前往设置打开权限。</string>
</resources>
