<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_solid_round_color_white_radius_def"
    android:layout_marginLeft="44dp"
    android:layout_marginRight="44dp">

    <ImageView
        android:id="@+id/basic_ui_iv_dialog_permission_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="13dp"
        android:tint="@color/gray_light"
        android:layout_alignParentRight="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_close" />

    <ImageView
        android:id="@+id/basic_ui_iv_dialog_permission"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/basic_ui_iv_dialog_permission_close"
        android:scaleType="fitCenter"
        tools:src="@drawable/basic_ui_dialog_permission_camera" />

    <TextView
        android:id="@+id/basic_ui_tv_dialog_permission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/basic_ui_iv_dialog_permission"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_title"
        tools:text="@string/basic_ui_dialog_permission_title_camera" />

    <TextView
        android:id="@+id/basic_ui_tv_dialog_permission_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/basic_ui_tv_dialog_permission_title"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:layout_marginRight="30dp"
        android:lineSpacingExtra="8dp"
        android:textColor="@color/text_gray_dark"
        android:textSize="@dimen/text_content"
        tools:text="@string/basic_ui_dialog_permission_description" />

    <TextView
        android:id="@+id/basic_ui_tv_dialog_permission_next"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textSize="@dimen/text_content"
        android:textColor="@color/text_white"
        android:layout_below="@+id/basic_ui_tv_dialog_permission_description"
        android:text="@string/basic_ui_dialog_permission_next"
        android:background="@drawable/bg_solid_round_color_main_radius_max"/>

</RelativeLayout>