<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="44dp"
    android:layout_marginRight="44dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@drawable/bg_solid_round_color_white_radius_def"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/basic_ui_dialog_update_title"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_headline" />

        <TextView
            android:id="@+id/basic_ui_tv_dialog_update_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            tools:text="2.1.1"
            android:textColor="@color/text_gray_dark"
            android:textSize="@dimen/text_title" />

        <TextView
            android:id="@+id/basic_ui_tv_dialog_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            tools:text="2019-03-15"
            android:textColor="@color/text_gray_dark"
            android:textSize="@dimen/text_auxiliary" />

        <TextView
            android:id="@+id/basic_ui_tv_dialog_update_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="18dp"
            android:gravity="left"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/text_gray_dark"
            android:textSize="@dimen/text_auxiliary"
            tools:text="1.修复了一个重大BUG\n2.首页全新改版，UI更清晰" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/basic_ui_tv_dialog_update_no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/basic_ui_dialog_update_no"
                    android:textColor="@color/text_gray_light"
                    android:textSize="@dimen/text_content" />

                <View
                    android:id="@+id/basic_ui_v_dialog_update_line"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/basic_ui_tv_dialog_update_yes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/basic_ui_dialog_update_yes"
                    android:textColor="@color/text_main"
                    android:textSize="@dimen/text_content" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/basic_ui_iv_dialog_update"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:src="@drawable/basic_ui_dialog_update" />

</RelativeLayout>